--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -9,8 +9,8 @@ compatibility_date = "2025-03-01"
 # 启用 D1 数据库
 [[d1_databases]]
 binding = "DB"
-database_name = "24mail"
-database_id = "2e77ff7b-bc72-4b10-b82c-3916093e642f"  # 需要替换为您的实际数据库 ID
+database_name = "24mail2"
+database_id = "9af7c20b-9523-44e2-9ff3-733ea51d56a8"  # 需要替换为您的实际数据库 ID
 
 # 配置邮件处理
 [triggers]
